# cnf-encoder

./: GRAMMAR.md  README.md  TODO.md  cnf-encoder.cabal
src/: CNF.hs  DIMACS.hs  Expr.hs  Main.hs  Parser.hs  Util.hs
