cabal-version:      3.0
name:               cnf-encoder
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Robert Coffey
-- maintainer:
-- copyright:
build-type:         Simple
extra-doc-files:    README.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable cnf-encoder
    import:           warnings
    hs-source-dirs:   src
    main-is:          Main.hs
    other-modules:    Expr, Parser
    default-language: Haskell2010
    build-depends:    base ^>=4.20.2.0
