cabal-version:      3.0
name:               cnf-encoder
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Robert Coffey
-- maintainer:
-- copyright:
build-type:         Simple
extra-doc-files:    README.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable cnf-encoder
    import:             warnings
    hs-source-dirs:     src
    main-is:            Main.hs
    other-modules:      CNF, DIMACS, Expr, Parser, Util
    default-language:   Haskell2010
    default-extensions: TemplateHaskell
    build-depends:      base ^>= 4.20.2.0,
                        containers >= 0.7,
                        template-haskell >= 2.22.0.0,
                        vector >= 0.13.2.0,
                        vector-algorithms >= 0.9.1.0
